# RAGParser

./: debug_ragparser.py  delete S3 files.txt  docker-compose.yml  pyproject.toml  simple_upload_example.py
materials/texts/: pdf_parser_prompt.txt  rag_parser_description.txt
src/: Dockerfile  README.md  pyproject.toml
src/.github/workflows/: ci.yml
src/app/: celery_client.py  main.py  monitoring_routes.py
src/k8s/: configmap-env.yaml  deployment-api.yaml  deployment-parser.yaml  keda-scaler.yaml  secret.yaml
src/monitoring/: README.md  USAGE.md  __init__.py  health_checks.py  middleware.py  prometheus_metrics.py  system_monitor.py
src/monitoring/collectors/: __init__.py  base_collector.py  cache_collector.py  queue_collector.py  storage_collector.py  system_collector.py  worker_collector.py
src/monitoring/scripts/: demo_monitoring.py
src/pdf_parser/: settings.py
src/pdf_parser/parsers/: base.py  docling_parser.py  factory.py  marker_parser.py  unstructured_parser.py
src/pdf_parser/utils/: logging_config.py  pdf_analyzer.py  queue.py  splitter.py  storage.py
src/scripts/: dev.ps1  run.py  run_fixed.py
src/tests/: test_integration.py
src/tests/utils/: test_splitter.py
src/worker/: __init__.py  enhanced_tasks.py  intelligent_router.py  tasks.py  tasks_old.py
